2008-01-16  Jim Meyering  <meyering@redhat.com>

	* autoboot.conf (gnulib_modules): Add stat-macros and pathmax.

2007-10-25  Paolo Bonzini  <bonzini@gnu.org>
	    Mike Frysinger   <vapier@gentoo.org>

	* doc/sed.x (q, Q): Document argument.
	* configure.ac: Remove texi2html checks.
	* doc/Makefile.am: Remove rules for sed.html, always distribute it.

2007-08-14  Paolo Bonzini  <bonzini@gnu.org>

	* sed/execute.c (open_next_file): Follow symlink here...
	(closedown): ... not here.

2007-06-29  Paolo Bonzini  <bonzini@gnu.org>

	* sed/mbcs.c: Upgrade to GPLv3.
	* sed/regexp.c: Upgrade to GPLv3.
	* sed/sed.c: Upgrade to GPLv3.
	* sed/sed.h: Upgrade to GPLv3.
	* sed/utils.c: Upgrade to GPLv3.
	* sed/utils.h: Upgrade to GPLv3.
	* sed/compile.c: Upgrade to GPLv3.
	* sed/execute.c: Upgrade to GPLv3.
	* sed/fmt.c: Upgrade to GPLv3.

2007-03-01  Masatake YAMATO  <jet@gyve.org>  (tiny change)

	* sed/compile.c (compile_program): Accept 0,/REGEXP/ address
	specification only if --posix is not specified.

2007-01-26  Paolo Bonzini  <bonzini@gnu.org>

        * sed/compile.c: Fix warnings.
        * sed/execute.c: Fix warnings.

	* sed/compile.c (check_final_program): Don't set text if the
	pending_text is initialized but empty.
	* sed/execute.c (output_line): Don't print text if it is NULL.
	* tests/Makefile.am (TESTS): Add insert.
	* tests/Makefile.tests (insert): New.
	* tests/insert.good, tests/insert.sed, tests/insert.inp: New
	testcase from Jonas Koelker.

2006-12-22  Bruno Haible  <bruno@clisp.org>

	* sed/utils.c: Include pathmax.
	* sed/mbcs.c: Use local_charset.
	* sed/execute.c: Copy with padding after the mbstate_t member.
	
2006-12-21  Paolo Bonzini  <bonzini@gnu.org>

	* sed/mbcs.c: Include string.h (reported by Henning Nielsen Lund).
	* sed/fmt.c: Likewise.
	* sed/regexp.c: Likewise.

2006-12-18  Paolo Bonzini  <bonzini@gnu.org>

	* sed/execute.c (closedown): Remove dead code.

2006-12-17  Paolo Bonzini  <bonzini@gnu.org>

	* sed/utils.c: Include limits.h.
